@@ -12,6 +12,7 @@
  *******************************************************************************/
 package org.eclipse.fordiac.ide.structuredtextalgorithm.ui.builder;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -24,16 +25,17 @@ import org.eclipse.core.runtime.IProgressMonitor;
 import org.eclipse.core.runtime.OperationCanceledException;
 import org.eclipse.core.runtime.Path;
 import org.eclipse.core.runtime.Status;
+import org.eclipse.emf.common.util.TreeIterator;
 import org.eclipse.emf.common.util.URI;
 import org.eclipse.emf.ecore.EObject;
+import org.eclipse.emf.ecore.resource.Resource;
 import org.eclipse.emf.ecore.util.EcoreUtil;
 import org.eclipse.fordiac.ide.model.datatype.helper.IecTypes.GenericTypes;
 import org.eclipse.fordiac.ide.model.errormarker.ErrorMarkerBuilder;
 import org.eclipse.fordiac.ide.model.errormarker.FordiacErrorMarker;
-import org.eclipse.fordiac.ide.model.errormarker.FordiacMarkerHelper;
 import org.eclipse.fordiac.ide.model.libraryElement.ErrorMarkerRef;
 import org.eclipse.fordiac.ide.model.libraryElement.LibraryElement;
-import org.eclipse.fordiac.ide.model.libraryElement.LibraryElementPackage;
+import org.eclipse.fordiac.ide.model.libraryElement.SystemConfiguration;
 import org.eclipse.fordiac.ide.model.libraryElement.Value;
 import org.eclipse.fordiac.ide.model.libraryElement.VarDeclaration;
 import org.eclipse.fordiac.ide.model.typelibrary.TypeEntry;
@@ -45,7 +47,6 @@ import org.eclipse.swt.widgets.Display;
 import org.eclipse.ui.PlatformUI;
 import org.eclipse.xtext.builder.IXtextBuilderParticipant;
 import org.eclipse.xtext.diagnostics.Severity;
-import org.eclipse.xtext.resource.IEObjectDescription;
 import org.eclipse.xtext.resource.IResourceDescription;
 import org.eclipse.xtext.validation.CheckType;
 import org.eclipse.xtext.validation.Issue;
@@ -72,16 +73,17 @@ public class STAlgorithmInitialValueBuilderParticipant implements IXtextBuilderP
 	protected void doBuild(final IResourceDescription.Delta delta, final IBuildContext context,
 			final IProgressMonitor monitor) throws CoreException {
 		try {
-			final Iterable<IEObjectDescription> varDeclarationDescriptions = delta.getNew()
-					.getExportedObjectsByType(LibraryElementPackage.eINSTANCE.getVarDeclaration());
-			for (final var varDeclarationDescription : varDeclarationDescriptions) {
+			final Resource resource = context.getResourceSet().getResource(delta.getUri(), true);
+			final TreeIterator<EObject> allContents = EcoreUtil.getAllContents(resource, true);
+			while (allContents.hasNext()) {
 				if (monitor.isCanceled()) {
 					throw new OperationCanceledException();
 				}
-				final EObject target = context.getResourceSet().getEObject(varDeclarationDescription.getEObjectURI(),
-						true);
-				if (target instanceof VarDeclaration) {
-					validateValue((VarDeclaration) target, delta, monitor);
+				final EObject target = allContents.next();
+				if (target instanceof SystemConfiguration) {
+					allContents.prune();
+				} else if (target instanceof final VarDeclaration varDeclaration) {
+					validateValue(varDeclaration, delta, monitor);
 				}
 			}
 		} catch (final OperationCanceledException e) {
@@ -102,8 +104,11 @@ public class STAlgorithmInitialValueBuilderParticipant implements IXtextBuilderP
 	protected void validateValue(final VarDeclaration varDeclaration, final IResourceDescription.Delta delta,
 			final IProgressMonitor monitor) throws CoreException {
 		final String value = getValue(varDeclaration);
-		final List<Issue> issues = StructuredTextParseUtil.validate(value, delta.getUri(),
-				STCoreUtil.getFeatureType(varDeclaration), null, null);
+		final List<Issue> issues = new ArrayList<>();
+		if (!value.isBlank()) { // do not parse value if blank
+			StructuredTextParseUtil.validate(value, delta.getUri(), STCoreUtil.getFeatureType(varDeclaration), null,
+					null, issues);
+		}
 		validateGenericValue(varDeclaration, value, issues);
 		if (monitor.isCanceled()) {
 			throw new OperationCanceledException();
@@ -111,9 +116,11 @@ public class STAlgorithmInitialValueBuilderParticipant implements IXtextBuilderP
 		final Value canonicalValue = getCanonicalObject(varDeclaration.getValue());
 		if (canonicalValue != null) {
 			updateErrorMessage(canonicalValue, issues);
-			final IFile file = getFile(delta.getUri());
-			if (file != null && file.exists()) {
-				updateMarkers(file, canonicalValue, issues, monitor);
+			if (!issues.isEmpty()) {
+				final IFile file = getFile(delta.getUri());
+				if (file != null && file.exists()) {
+					createMarkers(file, canonicalValue, issues, monitor);
+				}
 			}
 		}
 	}
@@ -123,13 +130,13 @@ public class STAlgorithmInitialValueBuilderParticipant implements IXtextBuilderP
 			final List<Issue> issues) {
 		if (varDeclaration.isIsInput() && GenericTypes.isAnyType(varDeclaration.getType())) {
 			if (varDeclaration.getFBNetworkElement() != null) {
-				if (varDeclaration.getInputConnections().isEmpty() && value.isEmpty()) {
+				if (varDeclaration.getInputConnections().isEmpty() && value.isBlank()) {
 					issues.add(createIssue(
 							Messages.STAlgorithmInitialValueBuilderParticipant_MissingValueForGenericInstanceVariable,
 							Severity.WARNING));
 				}
 			} else {
-				if (!value.isEmpty()) {
+				if (!value.isBlank()) {
 					issues.add(createIssue(
 							Messages.STAlgorithmInitialValueBuilderParticipant_SpecifiedValueForGenericTypeVariable,
 							Severity.WARNING));
@@ -159,9 +166,8 @@ public class STAlgorithmInitialValueBuilderParticipant implements IXtextBuilderP
 		}
 	}
 
-	protected void updateMarkers(final IFile file, final EObject object, final List<Issue> issues,
+	protected void createMarkers(final IFile file, final EObject object, final List<Issue> issues,
 			final IProgressMonitor monitor) throws CoreException {
-		deleteMarkers(file, object);
 		for (final Issue issue : issues) {
 			if (monitor.isCanceled()) {
 				throw new OperationCanceledException();
@@ -176,19 +182,11 @@ public class STAlgorithmInitialValueBuilderParticipant implements IXtextBuilderP
 		.setSeverity(getMarkerSeverity(issue)).setTarget(object).createMarker(file);
 	}
 
-	@SuppressWarnings("static-method")
-	protected void deleteMarkers(final IFile file, final EObject object) throws CoreException {
-		for (final IMarker marker : FordiacMarkerHelper.findMarkers(file, object,
-				FordiacErrorMarker.INITIAL_VALUE_MARKER)) {
-			marker.delete();
-		}
-	}
-
 	@SuppressWarnings("unchecked")
 	protected static <T extends EObject> T getCanonicalObject(final T object) {
 		final EObject root = EcoreUtil.getRootContainer(object);
-		if (root instanceof LibraryElement) {
-			final TypeEntry typeEntry = ((LibraryElement) root).getTypeEntry();
+		if (root instanceof final LibraryElement libraryElement) {
+			final TypeEntry typeEntry = libraryElement.getTypeEntry();
 			if (typeEntry != null) {
 				final LibraryElement typeEditable = typeEntry.getTypeEditable();
 				if (typeEditable != null) {
@@ -224,7 +222,7 @@ public class STAlgorithmInitialValueBuilderParticipant implements IXtextBuilderP
 	}
 
 	protected List<IResourceDescription.Delta> getRelevantDeltas(final IBuildContext context) {
-		return context.getDeltas().stream().filter(this::isRelevantDelta).collect(Collectors.toList());
+		return context.getDeltas().stream().filter(this::isRelevantDelta).toList();
 	}
 
 	protected boolean isRelevantDelta(final IResourceDescription.Delta delta) {
